# talkcalendar

./: LICENSE  README.md
bin-packages/: talkcalendar-gtk-1-1-1-debian64.tar  talkcalendar-gtk-1-1-debian64.tar  talkcalendar-gtk-1-2-debian64.tar  talkcalendar-gtk-1-3-debian64.tar  talkcalendar-gtk-1-4-1-64bit.tar  talkcalendar-gtk-1-4-2-64bit.tar  talkcalendar-gtk-1-4-debian64.tar  talkcalendar-gtk-1.0.tar  talkcalendar-gtk4-1.0.0.tar  talkcalendar-gtk4-1.0.1.tar  talkcalendar_1.1.1_amd64.deb  talkcalendar_1.1.1_amd64.md5  talkcalendar_1.1.1_amd64_bookworm.deb  talkcalendar_1.1.1_amd64_bookworm.md5
dictionary/: talk.tar
src/: Makefile  dictionary.c  dictionary.h  diphone.c  diphone.h  main.c  meson.build  wavcat.c  wavcat.h  word2phone.c  word2phone.h
src-gtk4/: compile.txt
src/src/: dbmanager.c  dbmanager.h  event.h  main.c  meson.build  wavcat.c  wavcat.h  wavplay.c  wavplay.h
